<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/population_label" />

                <EditText
                    android:id="@+id/min_pop_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:visibility="visible"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/region_select" />

                <Spinner
                    android:id="@+id/region_chooser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Spinner>
            </TableRow>

            <TableRow android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="filter"
                    android:text="@string/filter_btn"
                    android:background="?android:attr/activatedBackgroundIndicator" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/db_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/district_col"
                    android:textSize="18sp" />

                <TextView
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/population_col"
                    android:textSize="18sp" />

                <TextView
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/region_col"
                    android:textSize="18sp" />

                <TextView
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/code_col"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>